# allomere

./: .gitignore  .prettierrc  NOTE.md  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  styles.css
src-python/: requirements.txt
src-python/src/: beats.py  features.py  mse.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: handlers.rs  main.rs  states.rs
src-tauri/src/autogen/: constants.rs
src-tauri/src/handlers/: audio.rs  playback.rs  window.rs
src-tauri/src/states/: playback.rs  window.rs
src/components/: clip-focus.tsx  clip.tsx
src/constants/: global.ts
src/states/: global-states.ts
src/types/: state.ts
