[package]
name = "allomere"
version = "0.0.0"
description = "An Allomere App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7.1", features = [ "dialog-ask", "dialog-save", "dialog-confirm", "dialog-open", "dialog-message", "shell-open"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rodio = { version = "0.19.0", features = ["symphonia-flac"] }
anyhow = "1.0.86"
pyo3 = { version = "0.21.0", features = ["auto-initialize"] }
derivative = "2.2.0"
parking_lot = { version = "0.12.3", features = ["hardware-lock-elision"] }
tokio = { version = "1.38.1", features = ["full"] }
lazy_static = "1.5.0"
usearch = { git = "https://github.com/jbrummack/usearch.git", version = "2.15.1", features = ["simsimd"] }
numpy = "0.21.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
