[package]
name = "allomere"
version = "0.0.0"
description = "An Allomere App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rodio = { version = "0.20.1", features = ["symphonia-flac"] }
anyhow = "1.0.98"
pyo3 = { version = "0.23.3", features = ["auto-initialize"] }
derivative = "2.2.0"
parking_lot = { version = "0.12.3", features = ["hardware-lock-elision"] }
tokio = { version = "1.45.0", features = ["full"] }
lazy_static = "1.5.0"
usearch = { git = "https://github.com/jbrummack/usearch.git", version = "2.15.1", features = ["simsimd"] }
numpy = "0.23.0"
tauri-plugin = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-shell = "2.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
